<resources>
    <string name="app_name">game</string>
    <string name="edit_message">edit_message</string>
    <string name="button_send">Send</string>
    <string name="input">请输入</string>
    <string name="go">go</string>
    <string name="list">list</string>
    <string name="weex">weex</string>
    <string name="webview">webview</string>
    <string name="page6">PAGE6</string>
    <string name="page5">PAGE5</string>
    <string name="page8">PAGE8</string>
    <string name="page7">PAGE7</string>
    <string name="page2">page2</string>
    <string name="page3">PAGE3</string>
    <string name="page4">PAGE4</string>
    <string name="confirm">确定</string>
    <string name="cancle">取消</string>
    <string name="please_type_here">please type here:</string>
    <string name="teal">teal</string>
    <string name="blue">blue</string>
    <string name="red">red</string>
    <string name="orange">orange</string>
    <string name="row_one">row one</string>
    <string name="row_two">row two</string>
    <string name="row_three">row three</string>
    <string name="row_four">row four</string>
    <string name="button5">button5</string>
    <string name="button1">button1</string>
    <string name="button3">button3</string>
    <string name="button2">button2</string>
    <string name="button4">button4</string>
    <string name="input_name">请输入用户名</string>
    <string name="personal">个人登录</string>
    <string name="login">登录</string>
    <string name="login_f">法人登录</string>
    <string name="pass">请输入密码</string>
    <string name="todo">TODO</string>
    <string name="radiobutton">RadioButton</string>
    <string name="reload">reload</string>
    <string name="forward">forward</string>
    <string name="back">back</string>
</resources>
