<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapplication.MainActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editText"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="66dp"
            android:layout_marginRight="66dp"
            android:layout_toLeftOf="@+id/button2"
            android:layout_toStartOf="@+id/button2"
            android:width="300dp"
            android:hint="@string/edit_message"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="false"
            android:onClick="sendMessage"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/button_send" />

        <Button
            android:id="@+id/button"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText"
            android:layout_marginTop="20dp"
            android:onClick="goMain2Activity"
            android:text="@string/page2" />

        <Button
            android:id="@+id/button3"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button"
            android:layout_alignBottom="@+id/button"
            android:layout_centerHorizontal="true"
            android:onClick="goMain3Activity"
            android:text="@string/page3" />

        <Button
            android:id="@+id/button4"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button3"
            android:layout_alignBottom="@+id/button3"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="goMain4Activity"
            android:text="@string/page4" />

        <Button
            android:id="@+id/button5"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button10"
            android:layout_toLeftOf="@+id/button6"
            android:layout_toStartOf="@+id/button6"
            android:onClick="goMain5Activity"
            android:text="@string/page5" />

        <Button
            android:id="@+id/button6"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button10"
            android:layout_centerInParent="true"
            android:layout_centerVertical="false"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:onClick="goMain6Activity"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:text="@string/page6" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="false"
            android:layout_below="@+id/button10"
            android:layout_toEndOf="@+id/button6"
            android:layout_toRightOf="@+id/button6"
            android:onClick="goMain7Activity"
            android:text="@string/page7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button11"
            android:layout_marginTop="30dp"
            android:onClick="goMain8Activity"
            android:text="@string/page8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/button8"
            android:layout_centerInParent="false"
            android:onClick="goMain9Activity"
            android:text="@string/list" />

        <Button
            android:id="@+id/button10"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button3"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="false"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/alert_light_frame"
            android:onClick="goMain10Activity"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/webview"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button6"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@mipmap/ic_launcher_round"
            android:onClick="goMain11Activity"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/weex"
            android:visibility="visible" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
