<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="20dp"
    tools:context="com.example.myapplication.Main4Activity">

    <TextView
        android:id="@+id/tev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="24dp"
        android:text="@string/please_type_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tex"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@id/tev"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="13dp"
        android:inputType=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tev" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tex"
        android:orientation="horizontal"
        android:text="@string/confirm"
        app:layout_constraintRight_toRightOf="@+id/tev"
        app:layout_constraintTop_toTopOf="@+id/btn2" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tex"
        android:layout_marginTop="67dp"
        android:text="@string/cancle"
        app:layout_constraintStart_toStartOf="@+id/tex"
        app:layout_constraintTop_toBottomOf="@+id/tex" />
</android.support.constraint.ConstraintLayout>
